--- a/kernel-config/release/rk35xx/config-6.1
+++ b/kernel-config/release/rk35xx/config-6.1
@@ -1653,7 +1653,7 @@ CONFIG_VSOCKETS_DIAG=m
 CONFIG_VSOCKETS_LOOPBACK=m
 # CONFIG_VIRTIO_VSOCKETS is not set
 CONFIG_VIRTIO_VSOCKETS_COMMON=m
-# CONFIG_NETLINK_DIAG is not set
+CONFIG_NETLINK_DIAG=m
 CONFIG_MPLS=y
 CONFIG_NET_MPLS_GSO=m
 # CONFIG_MPLS_ROUTING is not set
